fix: change the footer background color; align to the top of the contact page content

--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ header a {
 /* footer */
 
 footer {
-    background-color: #A68868;
+    background-color: #4B6382;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -240,16 +240,16 @@ footer {
 .container-page {
     display: flex;
     flex-direction: column;
-     min-height: 80vh;
+    min-height: 80vh;
     min-height: 100vh;
 }
 
 .hero {
     flex: 1;
     margin: auto;
+    margin-top: 15px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     min-height: 65vh; 
 }
 
@@ -259,6 +259,7 @@ footer {
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    margin-top: 20px;
     gap: 50px;
 }
 
